--- a/trelloGementExtension/templates/button-dropdown.html
+++ b/trelloGementExtension/templates/button-dropdown.html
@@ -1,8 +1,7 @@
 <div class="btn-group" id="trello_button_group">
-  <button type="button" class="btn" id="button_trello" onclick="createCard()">Ajouter à TrelloGement</button>
-  <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+  <button type="button" class="btn" id="button_trello">Ajouter à TrelloGement</button>
+  <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="trello_button_group_dropdown">
     <span class="caret"></span>
-    <span class="sr-only">Toggle Dropdown</span>
   </button>
   <ul class="dropdown-menu" id="actions-available">
   </ul>
