Add material css and floating button

--- a/trelloGementExtension/templates/button-dropdown.html
+++ b/trelloGementExtension/templates/button-dropdown.html
@@ -1,8 +1,11 @@
+
+
 <div class="btn-group" id="trello_button_group">
-  <button type="button" class="btn" id="button_trello">Ajouter à TrelloGement</button>
-  <button type="button" class="btn dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="trello_button_group_dropdown">
-    <span class="caret"></span>
-  </button>
-  <ul class="dropdown-menu" id="actions-available">
-  </ul>
+  <div class="fixed-action-btn vertical">
+    <a class="trellogement-btn trellogement-btn-floating red" id="button_trello">
+      Ajouté au board
+    </a>
+    <ul id="actions-available">
+    </ul>
+  </div>
 </div>
