--- a/trelloGementExtension/templates/button-dropdown.html
+++ b/trelloGementExtension/templates/button-dropdown.html
@@ -2,9 +2,9 @@
 
 <div class="btn-group" id="trello_button_group">
   <div class="fixed-action-btn vertical">
-    <a class="trellogement-btn trellogement-btn-floating red" id="button_trello">
+    <button class="trellogement-btn trellogement-btn-floating red" id="button_trello">
       Ajouté au board
-    </a>
+    </button>
     <ul id="actions-available">
     </ul>
   </div>
